# quantum

./: GrayCode.py  ffqram.py  main.ipynb  main.py  pyproject.toml  transpiler.py
.ipynb_checkpoints/: main-checkpoint.py
ffqram-graphics-plot/: XGate-plot.py  depth_size_confront.py
jupiter/: different-plots-confrontation.py
jupyter/: different-plots-confrontation.py  plot-difference-size.py
lib/: circuit_metrics.py
old/: plot_try_barrier.py  transpiler.py
quantum/: circuit_metrics_data.json  circuit_metrics_table.csv  compare.py  csv_average.py  csv_convert.py  csv_state_fidelity.py  ffqram_fidelity_sv.csv  main.ipynb  main.py  size_depth_stateprep.py  size_plot.py  statevector.py
quantum/data/: count_ops.txt  differences.txt  ffqram_fidelity_sv.csv  metrics_summary.csv  metrics_summary.json  state_preparation_metrics.csv
quantum/data/state_fidelity_noise/: ffqram_fidelity_run_id_1.csv  ffqram_fidelity_run_id_10.csv  ffqram_fidelity_run_id_11.csv  ffqram_fidelity_run_id_12.csv  ffqram_fidelity_run_id_13.csv  ffqram_fidelity_run_id_14.csv  ffqram_fidelity_run_id_15.csv  ffqram_fidelity_run_id_16.csv  ffqram_fidelity_run_id_17.csv  ffqram_fidelity_run_id_18.csv  ffqram_fidelity_run_id_19.csv  ffqram_fidelity_run_id_2.csv  ffqram_fidelity_run_id_20.csv  ffqram_fidelity_run_id_21.csv  ffqram_fidelity_run_id_22.csv  (+20 more)
quantum/ffqram-graphics-plot/: controlstate-plot.py  depth_size_confront.py
quantum/jupyter/: different-plots-confrontation.py  different-plots-opt-barrier.py
quantum/lib/: circuit_metrics.py
quantum/old/: plot_try_barrier.py  transpiler.py
