[tool.poetry]
name = "quantum"
version = "0.1.0"
description = ""
authors = ["davide <rossidavide1102@gmail.com>"]
readme = "README.pdf"

[tool.poetry.dependencies]
python = "^3.12"
qiskit = "^1.2.4"
pylatexenc = "^2.10"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
notebook = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false